--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@
 
 .float-cancellation {
   display: block;
+  position: relative;
 }
 
 .red--box {
@@ -72,6 +73,110 @@
   float: left;
 }
 
-.blue-box {
+.blue--box {
+  width: 400px;
+  height: 400px;
+  background-color: #0008ff;
   float: left;
+}
+
+.clear-fix {
+  clear: both;
+}
+
+/* SP */
+@media screen and (max-width: 960px) {
+  .red--box {
+    float: none; 
+  }
+}
+
+.reverse-flexbox {
+  display: flex;
+  text-align: center;
+}
+
+.reverse-red-box {
+  width: 400px;
+  min-height: 400px;
+  background-color: #f00;
+}
+
+.reverse-blue-box {
+  width: 400px;
+  height: 400px;
+  background-color: #0008ff;
+}
+
+.reverse-orange-box {
+  width: 400px;
+  height: 400px;
+  background-color: #ff8400;
+}
+
+/* SP */
+@media screen and (max-width: 960px) {
+  .reverse-flexbox {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+
+.replacement-flexbox {
+  display: flex;
+  text-align: center;
+  position: absolute;
+}
+
+.replacement-green-box {
+  width: 400px;
+  height: 400px;
+  background-color: #00ff51;
+  position: relative;
+}
+
+.replacement-yellowbox {
+  width: 400px;
+  height: 400px;
+  background-color: #d4ff00;
+  position: relative;
+}
+
+.replacement-pinkbox {
+  width: 400px;
+  height: 400px;
+  background-color: #ff00e1;
+  position: relative;
+}
+
+/* SP */
+@media screen and (max-width: 960px) {
+  .replacement-pinkbox {
+    order: 1;
+  }
+  .replacement-green-box {
+    order: 2;
+  }
+  .replacement-yellowbox {
+    order: 3;
+  }
+}
+
+.display-hidden {
+  display: flex;
+  position: relative;
+}
+
+.display-red-box {
+  width: 400px;
+  height: 400px;
+  background-color: #f00;
+  position: absolute;
+}
+
+.display-green-box {
+  width: 400px;
+  height: 400px;
+  background-color: #00ff51;
+  position: absolute;
 }
