--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 .warapper {
   width: 1100px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .red-box {
@@ -62,9 +62,10 @@
   }
 }
 
-.float-cancellation {
+.clearfix::after {
+  content: "";
   display: block;
-  position: relative;
+  clear: both;
 }
 
 .red--box {
@@ -81,10 +82,6 @@
   float: left;
 }
 
-.clear-fix {
-  clear: both;
-}
-
 /* SP */
 @media screen and (max-width: 960px) {
   .red--box {
@@ -94,7 +91,6 @@
 
 .reverse-flexbox {
   display: flex;
-  text-align: center;
 }
 
 .containerA {
@@ -109,6 +105,7 @@
   min-height: 400px;
   background-color: #f00;
   position: relative;
+  flex-shrink: 0;
 }
 
 .containerB {
@@ -123,6 +120,7 @@
   height: 400px;
   background-color: #0008ff;
   position: relative;
+  flex-shrink: 0;
 }
 
 .containerC {
@@ -137,6 +135,7 @@
   height: 400px;
   background-color: #ff8400;
   position: relative;
+  flex-shrink: 0;
 }
 
 /* SP */
@@ -149,8 +148,6 @@
 
 .replacement-flexbox {
   display: flex;
-  text-align: center;
-  position: absolute;
 }
 
 .replacement-green-box {
@@ -158,6 +155,7 @@
   height: 400px;
   background-color: #00ff51;
   position: relative;
+  flex-shrink: 0;
 }
 
 .replacement-yellowbox {
@@ -165,6 +163,7 @@
   height: 400px;
   background-color: #d4ff00;
   position: relative;
+  flex-shrink: 0;
 }
 
 .replacement-pinkbox {
@@ -172,6 +171,7 @@
   height: 400px;
   background-color: #ff00e1;
   position: relative;
+  flex-shrink: 0;
 }
 
 /* SP */
@@ -189,19 +189,32 @@
 
 .display-hidden {
   display: flex;
-  position: relative;
 }
 
 .display-red-box {
   width: 400px;
   height: 400px;
   background-color: #f00;
-  position: absolute;
+  flex-shrink: 0;
 }
 
 .display-green-box {
   width: 400px;
   height: 400px;
   background-color: #00ff51;
-  position: absolute;
+  flex-shrink: 0;
+}
+
+.display-blue-box {
+  width: 400px;
+  height: 400px;
+  background-color: #0008ff;
+  flex-shrink: 0;
+}
+
+/* SP */
+@media screen and (min-width:960px) {
+  .display-blue-box {
+    display: none;
+  }
 }
